--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ordenes Elotecos</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="principal.js"></script>
+    <script defer type="module" src="principal.js"></script>
 </head>
 <body>
     <header>
         <h1>Ordenes Elotecos</h1>
     </header>
     <nav class="horizontal-scroll">
-        <button id="btn-todo">Todo</button>
-        <button id="btn-elotes">Elotes</button>
-        <button id="btn-esquites">Esquites</button>
-        <button id="btn-maruchan">Maruchan</button>
-        <button id="btn-snacks">Snacks</button>
-        <button id="btn-drinks">Drinks</button>
-        <button id="btn-refrescos">Refrescos</button>
+        <button id="btn-todo"><b>Todo</b></button>
+        <button id="btn-elotes"><b>Elotes</b></b></button>
+        <button id="btn-esquites"><b>Esquites</b></button>
+        <button id="btn-maruchan"><b>Maruchans</b></button>
+        <button id="btn-snacks"><b>Snacks</b></button>
+        <button id="btn-drinks"><b>Drinks</b></button>
     </nav>
     <main>
         <div id="product-container" class="product-container"></div>
