--- a/product.html
+++ b/product.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalle del Producto</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="principal.js"></script> <!-- Ensure principal.js is loaded first -->
     <script defer src="product.js"></script>
 </head>
 <body>
@@ -15,6 +14,7 @@
         <div class="product-info">
             <h1 id="product-title"></h1>
             <p id="product-description"></p>
+            <p id="product-id">Eliddd</p> <!-- Elemento para mostrar el ID del producto -->
             <div class="options">
                 <h2>Opciones</h2>
                 <!-- Opciones del producto se agregarán dinámicamente aquí -->
