--- a/product.html
+++ b/product.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detalles del Producto</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer type="module" src="product.js"></script>
+    <title>Product Details</title>
+    <link rel="stylesheet" href="products.css">
 </head>
 <body>
-    <header>
-        <h1>Detalles del Producto</h1>
-    </header>
-    <main>
-        <div id="product-details"></div>
-    </main>
-    <footer>
-        <p>© 2024 Elotecos</p>
-    </footer>
+    <div class="container">
+        <div class="header">Product Details</div>
+        <div id="product-details" class="product-detail">
+            <!-- This will be dynamically populated by JavaScript -->
+        </div>
+        <div class="footer">Footer Content</div>
+    </div>
+
+    <script type="module" src="product.js"></script>
 </body>
 </html>
